--- a/index.html
+++ b/index.html
@@ -466,9 +466,9 @@ https://templatemo.com/tm-548-training-studio
     <script src="assets/js/bootstrap.min.js"></script>
 
     <!-- Plugins -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/scrollReveal.js/4.0.9/scrollreveal.min.js"></script>
+    <script src="assets/js/scrollreveal.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/countup.js/2.8.0/countUp.min.js"></script>
+    <script src="assets/js/jquery.counterup.min.j"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/imgix.js/4.0.1/imgix.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mixitup/3.3.1/mixitup.min.js"></script>
     <script src="assets/js/accordions.js"></script>
