fixed character error

--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@ https://templatemo.com/tm-548-training-studio
     <!-- Plugins -->
     <script src="assets/js/scrollreveal.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
-    <script src="assets/js/jquery.counterup.min.j"></script>
+    <script src="assets/js/jquery.counterup.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/imgix.js/4.0.1/imgix.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mixitup/3.3.1/mixitup.min.js"></script>
     <script src="assets/js/accordions.js"></script>
